@@ -2786,6 +2786,14 @@ operator|||
 name|c
 operator|==
 literal|'?'
+operator|||
+name|c
+operator|==
+literal|'|'
+operator|||
+name|c
+operator|==
+literal|'&'
 condition|)
 block|{
 name|sb
