@@ -827,7 +827,7 @@ public class QueryParser {
       // These characters are part of the query syntax and must be escaped
       if (c == '\\' || c == '+' || c == '-' || c == '!' || c == '(' || c == ')' || c == ':'
         || c == '^' || c == '[' || c == ']' || c == '\"' || c == '{' || c == '}' || c == '~'
-        || c == '*' || c == '?') {
+        || c == '*' || c == '?' || c == '|' || c == '&') {
         sb.append('\\');
       }
       sb.append(c);
